IJAI-955 give the headless IDE start the default timeout, and run it as a blocking shared computation
The commit "start the headless IDE beside the packaging" moved the listBundledPlugins start into a fork that runs beside the JAR packing. On a 4-core agent the IDE now competes with the packing, and every launched app is 2 to 3 times slower than on an idle agent. The start relied on the 30 s default of runProduct, the only caller that did. Since 2026-09-02 about one run in four of "IdeaCommunity Build Test" killed the start after 30 s, twice, while it was still in normal application startup. The error output was empty, so the cause stayed hidden. traverseUI and keymap already pass DEFAULT_TIMEOUT, and now listBundledPlugins does too.

buildProvidedModuleList no longer suspends. It runs as a blocking shared computation on a virtual thread of its own through sharedLazy, the blocking twin of suspendingLazy, and every caller of BuildContext.builtinModules blocks its own virtual thread. The product runner and runJava still suspend, so the function enters coroutines only around the runner. The direction is fewer suspend boundaries in the build scripts; a computation that does not need to suspend runs on the JDK primitives.

The timeout thread dump looked for jstack in JAVA_HOME and on PATH, and found neither on the agent. It now uses the jstack next to the launched JDK first, so the next slow start leaves a dump in the build log. The KDoc of dumpThreads says why the dump runs the jstack binary, and not the Attach API. The IDE adds the coroutine dump, the progress indicator state, and the lock state to the jstack output through the JBR hook. The Attach API is the same producer and gives the same text, but it needs --add-opens=jdk.attach/sun.tools.attach=ALL-UNNAMED, which the build JVM does not have.

GitOrigin-RevId: 593679c60f0e69323374d7a473cd6ca8a21d0968